hphp/test/zend/bad/zend/call_static_004.php
<?php

class foo {
	static function __callstatic($a, $b) {
		var_dump($a);
	}
}

foo::AaA();

$a = 1;
foo::$a();

?>